<resources>
    <string name="app_name">NFC</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="secim">Seçiminizi belirleyin</string>
    <string name="kimlik_kart">Kimlik Kartı</string>
    <string name="pasaport">Pasaport</string>
    <string name="kredi_kart">Kredi Kartı</string>
    <string name="image">image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nfc_message2">And maintain your card to phone contact during he setup. Turn on NFC in settings.\nThe process will take 2-3 minutes.</string>
    <string name="nfc_is_not_enabled_or_available">NFC is not enabled or available</string>
    <string name="please_turn_on_nfc_from_your_device_settings_first">Please turn on NFC from your device settings first!</string>
    <string name="ok">OK</string>
    <string name="title_activity_result">ResultActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="card_number">Card Number</string>
    <string name="nfc_description">Cihazı okutacağınız kart/pasaport üzerine koyun ve hareket ettirmeyin.</string>
    <string name="valid_passport">Valid Passport</string>
    <string name="the_passport_chip_and_content_are_valid">The passport chip and content are valid</string>
    <string name="tc_kimlik">TÜRKİYE CUMHURİYETİ KİMLİK KARTI</string>
    <string name="republic">REPUBLIC OF TURKEY IDENTITY CARD</string>
    <string name="mrz_onaylandi">MRZ ONAYLANDI</string>
    <string name="snack_unknown_bank_card">This is unknown bank card. Please, go to my github repo!</string>
    <string name="snack_doNotMoveCard">Please do not move card, try again !</string>
    <string name="snack_unknownEmv">Unknown EMV card</string>
    <string name="snack_lockedNfcCard">NFC is locked on this card.</string>
    <string name="title_activity_credit_card_result">CreditCardResultActivity</string>
</resources>